<resources>
    <string name="app_name">Passanger</string>
    <string name="loginPassword">%s</string>
    <string name="password">Password</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="enter">Enter</string>
    <string name="reset_main_password">Reset Main Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="all_saved_passwords_will_be_reset">All saved passwords will be reset</string>
    <string name="confirm">Confirm</string>
    <string name="exit_popup">exit popup</string>
    <string name="reset">Reset</string>
    <string name="login_confirm">Login_confirm</string>
    <string name="reset_login">reset login</string>
    <string name="saved_passwords">Saved Passwords</string>
    <string name="new_password">New Password</string>
    <string name="password_delete">Delete Password</string>
    <string name="edit">Edit</string>
    <string name="create_password">Create Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="saved_password">Saved Password</string>
    <string name="username">Username</string>
    <string name="name_max_15_chars">Name(max 15 chars)</string>
    <string name="saved_username">saved username</string>
    <string name="back">Back</string>
    <string name="save_and_exit">Save And Exit</string>
    <string name="enter_password">Enter Password</string>
    <string name="backspace_symbol">⌫</string>
    <string name="passanger">Passanger</string>
</resources>