<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resetAccPopup"

    android:layout_width="409dp"
    android:layout_height="268dp"

    android:layout_centerVertical="true"
    >
    <item
        android:enabled="false"
        android:id="@+id/resetText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetConfirmText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="99dp"
        android:gravity="center"
        android:title="@string/all_saved_passwords_will_be_reset" />

    <item
        android:id="@+id/resetButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetConfirmText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"


        android:layout_marginStart="149dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="149dp"

        android:text="@string/confirm"
        android:title="@string/reset_login" />

</menu>

