<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passanger"
    android:background="@drawable/ssb"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#488C1D1D"
        android:text="@string/enter"
        android:textColor="#08F6DE"
        android:backgroundTint="#77000000"
        android:textColorLink="#D11F1F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numpad_0" />

    <Button
        android:id="@+id/numpad_6"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_6"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintStart_toEndOf="@+id/numpad_5"
        app:layout_constraintTop_toTopOf="@+id/numpad_5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_1"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_1"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintEnd_toStartOf="@+id/numpad_2"
        app:layout_constraintTop_toBottomOf="@+id/numpad_4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_8"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_8"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintBottom_toTopOf="@+id/numpad_5"
        app:layout_constraintEnd_toEndOf="@+id/numpad_5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_7"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_7"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintBottom_toTopOf="@+id/numpad_4"
        app:layout_constraintEnd_toStartOf="@+id/numpad_8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_9"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_9"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintBottom_toTopOf="@+id/numpad_6"
        app:layout_constraintStart_toEndOf="@+id/numpad_8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_0"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_0"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numpad_2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_3"
        android:textColor="#159E8F"
        android:textColorLink="#8A5454"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintStart_toEndOf="@+id/numpad_2"
        app:layout_constraintTop_toBottomOf="@+id/numpad_6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_5"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_5"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_4"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_4"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintEnd_toStartOf="@+id/numpad_5"
        app:layout_constraintTop_toTopOf="@+id/numpad_5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/numpad_2"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="#CBFFFFFF"
        android:backgroundTint="#77000000"
        android:text="@string/_2"
        android:textColor="#159E8F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:iconTint="#923838"
        app:layout_constraintEnd_toEndOf="@+id/numpad_5"
        app:layout_constraintTop_toBottomOf="@+id/numpad_5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/loginPassword"
        android:layout_width="364dp"
        android:layout_height="64dp"
        android:layout_marginBottom="-100dp"
        android:background="#B6000000"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#02DDFF"
        android:textColorLink="#04FBFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/numpad_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        tools:ignore="TextSizeCheck"
        tools:text="Password field" />

    <Button
        android:id="@+id/loginReset"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:background="#7BFFFFFF"
        android:text="@string/reset"
        android:textColor="#36EBFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/Widget.Material3.MaterialTimePicker.Button"
        android:layout_width="77dp"
        android:layout_height="80dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="32dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/backspace_symbol"
        android:textAlignment="center"
        android:textColor="#FF8100"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>