<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/displayDetails"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ssb"
    >

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="413dp"
        android:layout_height="78dp"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFCB00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,VisualLintBounds" />

    <TextView
        android:id="@+id/showUsername"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="170dp"
        android:background="#AE000000"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-medium"
        android:text="@string/username"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#00FFCA"
        android:textColorHighlight="#000000"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/showPassword"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@+id/displayUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="#AE000000"
        android:fontFamily="sans-serif-medium"
        android:text="@string/password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#00FFCA"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayUsername"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/displayUsername"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@+id/showUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="#AE000000"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#D35C0E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/showUsername"
        tools:layout_editor_absoluteX="0dp"
        tools:text="@string/saved_username" />

    <TextView
        android:id="@+id/displayPassword"
        android:layout_width="match_parent"
        android:layout_height="68dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="#AE000000"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#D35C0E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPassword"
        tools:text="@string/saved_password" />

</androidx.constraintlayout.widget.ConstraintLayout>