<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNewPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passanger"
    android:background="@drawable/ssb">

    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="200dp"
        android:background="#89000000"
        android:text="@string/create_password"
        android:textAlignment="center"
        android:textColor="#13FBC3"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextSizeCheck" />

    <Button
        android:id="@+id/confirmPassword"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="357dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="#51FFFFFF"

        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#11BA93"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/createUser"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/createUser"
        app:layout_constraintTop_toBottomOf="@+id/createPassword"
        tools:text="CreatePassword"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/createUser"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="362dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#B1000000"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#07FBAE"
        android:textColorHint="#07FAAD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/slotDescriptor" />

    <EditText
        android:id="@+id/slotDescriptor"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="362dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:background="#B1000000"
        android:ems="10"
        android:hint="@string/name_max_15_chars"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#07FBAE"
        android:textColorHint="#07FAAD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordText" />

    <EditText
        android:id="@+id/createPassword"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="362dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#B1000000"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#07FBAE"
        android:textColorHint="#07FAAD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordText"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/newPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/createUser"
        tools:ignore="TextFields" />


</androidx.constraintlayout.widget.ConstraintLayout>