<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passanger"
    android:background="@drawable/ssb">


    <TextView
        android:id="@+id/KMSText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:text="@string/saved_password"
        android:textColor="#00F8DF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savedPass1"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:background="#9008D1E6"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#90FFF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="#1D1B20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KMSText"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="SavedPassword" />

    <Button
        android:id="@+id/savedPass2"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#9008D1E6"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#90FFF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPass1"
        tools:text="SavedPassword" />

    <Button
        android:id="@+id/savedPass3"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#9008D1E6"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#90FFF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPass2"
        tools:text="SavedPassword" />

    <Button
        android:id="@+id/savedPass4"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#9008D1E6"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#90FFF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPass3"
        tools:text="SavedPassword" />

    <Button
        android:id="@+id/savedPass5"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:background="#9008D1E6"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#90FFF7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPass4"
        tools:text="SavedPassword" />

    <Button
        android:id="@+id/editPass1"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="63dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:text="@string/edit"
        android:textColor="#5EF1F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/savedPass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedPass1"
        app:layout_constraintTop_toTopOf="@+id/savedPass1"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/editPass2"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="63dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:text="@string/edit"
        android:textColor="#5EF1F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/savedPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedPass1"
        app:layout_constraintTop_toTopOf="@+id/savedPass2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/editPass3"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="63dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:text="@string/edit"
        android:textColor="#5EF1F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/savedPass3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedPass1"
        app:layout_constraintTop_toTopOf="@+id/savedPass3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/editPass4"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="63dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:text="@string/edit"
        android:textColor="#5EF1F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/savedPass4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/savedPass1"
        app:layout_constraintTop_toTopOf="@+id/savedPass4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/editPass5"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="63dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:text="@string/edit"
        android:textColor="#5EF1F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/savedPass5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/savedPass1"
        app:layout_constraintTop_toTopOf="@+id/savedPass5"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>